# Simple-Agentic-AI-Project

./: .gitignore  pyproject.toml  requirements.txt
.claude/: settings.json
